--- a/css/styles.css
+++ b/css/styles.css
@@ -118,34 +118,34 @@ h1 {
 .card {}
 
 
-  /*page 2 styling dont touch*/
-
-  /*page 2 landing styling*/
+/*page 2 styling dont touch*/
 
 
-  #thumb{
-    padding-top: 40px;
-    width: 360px;
+/*page 2 landing styling*/
 
-  }
+#thumb {
+  padding-top: 40px;
+  width: 360px;
+}
 
-  #lorem{
-    padding: 40px;
-  }
+#lorem {
+  padding: 40px;
+}
 
-#intro{
+#intro {
   background-size: cover;
-  
   color: white;
   font-weight: bold;
   height: 405px;
-
 }
 
 p {
   color: white;
-
   display: block;
   font-size: 22px;
   font-weight: bold;
+}
+
+h3 {
+  padding: 20px;
 }
