Add styling to page2 css and change font size and weight in styles.css

--- a/css/page2.css
+++ b/css/page2.css
@@ -2,7 +2,8 @@
 body {
   overflow-x: hidden;
   font-family: 'Bubbler One', sans-serif;
-  background-color: black;
+
+  /*background-color: black;*/
 }
 
 
@@ -22,4 +23,67 @@ body {
 .item {
   position: relative;
   overflow: hidden;
+}
+
+/*stylin page 2 for games template*/
+
+#thumb{
+  padding-top: 40px;
+  width: 360px;
+
+}
+
+#lorem{
+  padding: 40px;
+}
+
+#intro{
+background-size: cover;
+
+color: white;
+font-weight: bold;
+height: 505px;
+
+}
+.
+
+section{
+  /*background-color: black;*/
+
+}
+
+.screen-shots,#overview,#description,#system-req{
+  padding-top: 20px;
+  font-size: 15px;
+}
+/*styling the cards*/
+.card-img-top{
+  padding-left:  30px;
+  width: auto;
+}
+
+#description{
+
+
+
+}
+
+#system-req{
+
+
+
+
+}
+
+
+
+.col-md-4{
+
+
+  padding-right: 40px;
+}
+.col-md-8{
+  padding-left: 95px;
+  padding-right: 40px;
+
 }
