--- a/css/page2.css
+++ b/css/page2.css
@@ -1,13 +1,8 @@
-
 body {
   overflow-x: hidden;
   font-family: 'Bubbler One', sans-serif;
-
   /*background-color: black;*/
 }
-
-
-
 
 .picture {
   border-radius: 8px;
@@ -25,65 +20,56 @@ body {
   overflow: hidden;
 }
 
+
 /*stylin page 2 for games template*/
 
-#thumb{
+#thumb {
   padding-top: 40px;
   width: 360px;
-
 }
 
-#lorem{
+#lorem {
   padding: 40px;
 }
 
-#intro{
-background-size: cover;
-
-color: white;
-font-weight: bold;
-height: 505px;
-
+#intro {
+  background-size: cover;
+  color: white;
+  font-weight: bold;
+  height: 505px;
 }
-.
 
-section{
+. section {
   /*background-color: black;*/
-
 }
 
-.screen-shots,#overview,#description,#system-req{
+.screen-shots, #overview, #description, #system-req {
   padding-top: 20px;
   font-size: 15px;
 }
+
+
 /*styling the cards*/
-.card-img-top{
-  padding-left:  30px;
+
+.card-img-top {
+  padding-left: 30px;
   width: auto;
 }
 
-#description{
+#description {}
 
+#system-req {}
 
-
-}
-
-#system-req{
-
-
-
-
-}
-
-
-
-.col-md-4{
-
-
+.col-md-4 {
   padding-right: 40px;
 }
-.col-md-8{
+
+.col-md-8 {
   padding-left: 95px;
   padding-right: 40px;
+}
 
+.card-img-top {
+  width: 260px;
+  height: 140px;
 }
