--- a/css/styles.css
+++ b/css/styles.css
@@ -183,3 +183,9 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: bold;
 }
+
+#action {
+  padding: 30px;
+  text-align: center;
+  font-size: 50px;
+}
