--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,14 @@ h1 {
   margin-left: 0px;
 }
 
+.carousel-item:hover img {
+  -moz-transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+  opacity: 0.8;
+  /*filter: alpha(opacity=90);*/
+}
+
 
 /*card styling*/
 
