--- a/css/styles.css
+++ b/css/styles.css
@@ -120,6 +120,13 @@ h1 {
   /*filter: alpha(opacity=90);*/
 }
 
+.carousel-item img {
+  max-width: 100%;
+  -moz-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
 
 /*card styling*/
 
