adding changes to make the sidebar fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,15 @@ body {
   margin-right: 18px;
 }
 
+.downwardbtn {
+  margin-top: 200px;
+  color: purple
+}
+
+#emm {
+  color: blue
+}
+
 .content-wrapper {}
 
 .dropbtn {
@@ -181,4 +190,8 @@ h3 {
   padding: 20px;
   background-image: url("../img/nfsback.jpg");
   background-size: cover;
+}
+
+aside {
+  position: fixed;
 }
